# cctv_video_processing_cpp

./: .gitignore  CMakeLists.txt  README.md  REFF.md  build.sh  main.cpp  run_debug.sh
benchmarking/: mobilenet_ssd_python.py
src/: main.cpp
